# treee

./: .gitignore  Cargo.toml  index.html  readme.md  rustfmt.toml  wasm.ps1
common/: Cargo.toml
common/src/: lib.rs
cwd/: .gitignore  test.laz
data-file/: Cargo.toml
data-file/src/: lib.rs
importer/: Cargo.toml
importer/src/: cache.rs  calculations.rs  cashe.rs  data_point.rs  laz.rs  level_of_detail.rs  lib.rs  main.rs  point.rs  progress.rs  quad_tree.rs  segment.rs  tree.rs  triangulation.rs  writer.rs
importer/src/calculations/: level_of_detail.rs  mod.rs  normal.rs  size.rs
input/: Cargo.toml
input/src/: keyboard.rs  lib.rs  mouse.rs
k-nearest/: Cargo.toml  readme.md
k-nearest/src/: adapter.rs  best_set.rs  kd_tree.rs  lib.rs  metric.rs
k_nearest/: Cargo.toml  readme.md
k_nearest/src/: best_set.rs  kd_tree.rs  lib.rs  metric.rs
math/: Cargo.toml  README.md
math/src/: angle.rs  lib.rs  mat.rs  matrix.rs  projection.rs  quaternion.rs  requirements.rs  transform.rs  vector.rs
project/: Cargo.toml
project/src/: lib.rs
render/: Cargo.toml
render/assets/: eye_dome.wgsl  shader_2d.wgsl
render/src/: camera.rs  camera_3d.rs  depth_texture.rs  entry.rs  eye_dome.rs  eye_dome.wgsl  game.rs  lib.rs  lines.rs  lines.wgsl  lookup.rs  mesh.rs  mesh.wgsl  pipeline.rs  pipeline_3d.wgsl  point.rs  point_cloud.rs  point_cloud.wgsl  render_pass.rs  state.rs  texture.rs  ui.rs  ui.wgsl  vertex_2d.rs  window.rs
render/src/gpu/: camera_3d.rs  mod.rs  point_cloud.rs
scripts/: run-all.py  test-single.py
treee/: Cargo.toml
treee-wasm/: Cargo.toml
treee-wasm/src/: lib.rs
treee/src/: calculations.rs  camera.rs  empty.rs  hull.rs  interactive.rs  laz.rs  lib.rs  loading.rs  main.rs  octree.rs  program.rs  segmenting.rs  task.rs  ui.rs
treee/src/interactive/: hull.rs  mod.rs  trunk_axis.rs
triangulation/: Cargo.toml
triangulation/src/: lib.rs
ui/: Cargo.toml
ui/src/: area.rs  button.rs  hide.rs  image.rs  lib.rs  popup.rs  relative.rs  slider.rs  split.rs  text.rs  ui_collection.rs
viewer/: Cargo.toml
viewer/assets/: convert.ps1  tool.txt
viewer/src/: camera.rs  game.rs  interface.rs  lib.rs  loaded_manager.rs  lod.rs  main.rs  point_cloud.rs  reader.rs  segment.rs  state.rs  tree.rs  world.rs
window/: Cargo.toml
window/examples/: show_e57.rs
window/src/: camera.rs  game.rs  lib.rs  lod.rs  state.rs  tree.rs
