# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"render",
	"math",
	"viewer",
	"importer",
	"k-nearest",
	"common",
	"input",
	"ui",
]
resolver = "2"


[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.73"

[workspace.dependencies]
render = { path = "./render" }
math = { path = "./math" }
input = { path = "./input" }
common = { path = "./common" }
k-nearest = { path = "./k-nearest" }
ui = { path = "./ui" }

pollster = "0.3"
rfd = "0.12"
crossbeam-channel = "0.5"
env_logger = "0.10"
image = { version = "0.24", default-features = false, features = ["png"] }
log = "0.4"
wgpu = "0.18"
winit = "0.28"
wgpu_text = "0.8"
bytemuck = { version = "1.14", features = ["derive"] }
bincode = "1.3.3"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
num_cpus = "1.15"
crossbeam = "0.8"
las = { version = "0.8", features = ["laz"] }
thiserror = "1.0"
indicatif = "0.17"
tempfile = "3.8.1"
rayon = "1.8.0"
