# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["input", "render", "treee", "treee-wasm", "k-nearest"]
default-members = ["treee"]

resolver = "2"

[workspace.lints.clippy]
use_self = "warn"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.73"

[workspace.dependencies]
render = { path = "./render" }
input = { path = "./input" }
treee = { path = "./treee" }
k-nearest = { path = "./k-nearest" }

pollster = "0.3"
rfd = "0.14"
env_logger = "0.11"
image = { version = "0.24", default-features = false, features = ["png"] }
log = "0.4"
wgpu = "0.19"
winit = { version = "0.29", features = ["rwh_05"] }
bytemuck = { version = "1.14", features = ["derive", "extern_crate_alloc"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8"
num_cpus = "1.15"
crossbeam = "0.8"
thiserror = "1.0"
tempfile = "3.8.1"
rayon = "1.8.0"
termsize = "0.1"
clap = { version = "4.4", features = ["derive"] }
voronator = "0.2.1"
cfg-if = "1.0.0"
laz = "0.8.3"
static_assertions = "1.1.0"
colored = "2.1.0"
nalgebra = { version = "0.32.4", features = [
	"macros",
	"serde-serialize",
	"bytemuck",
] }

egui-wgpu = { version = "0.27", features = ["winit"] }
egui = "0.27"
egui-winit = { version = "0.27", default-features = false, features = [
	"links",
] }
bincode = "1.3.3"
web-time = "1.1"
simple_logger = "5.0"
web-sys = { version = "0.3", features = [
	"Document",
	"Window",
	"Element",
	'Headers',
	'Request',
	'RequestInit',
	'RequestMode',
	'Response',
	'ReadableStream',
	'ReadableStreamDefaultReader',
] }
js-sys = "0.3"
wasm-bindgen-futures = "0.4.30"
wasm-bindgen = "0.2"
proj4rs = "0.1.2"
console_error_panic_hook = "0.1.6"
console_log = "1.0"
getrandom = "0.2"
wasm-bindgen-rayon = { version = "1.2", features = ["no-bundler"] }
