[package]
name = "data-file"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck.workspace = true
tempfile.workspace = true

[lints]
workspace = true
