[package]
name = "importer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
render.workspace = true
math.workspace = true
k-nearest.workspace = true
common.workspace = true
rand.workspace = true
serde.workspace = true
num_cpus.workspace = true
crossbeam.workspace = true
las.workspace = true
rfd.workspace = true
thiserror.workspace = true
indicatif.workspace = true
