[package]
name = "importer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
math.workspace = true
k-nearest.workspace = true
project.workspace = true
rand.workspace = true
serde.workspace = true
crossbeam.workspace = true
las.workspace = true
rfd.workspace = true
thiserror.workspace = true
tempfile.workspace = true
rayon.workspace = true
termsize.workspace = true
bytemuck.workspace = true
clap.workspace = true
voronator.workspace = true
serde_json.workspace = true
cfg-if.workspace = true
tracing = "0.1.40"
tracing-flame = "0.2.0"
tracing-subscriber = "0.3.18"

[features]
default = []
segmentation-svgs = []
