[package]
name = "importer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints]
workspace = true

[dependencies]
k-nearest.workspace = true
project.workspace = true
rand.workspace = true
serde.workspace = true
crossbeam.workspace = true
rfd.workspace = true
thiserror.workspace = true
tempfile.workspace = true
rayon.workspace = true
termsize.workspace = true
bytemuck.workspace = true
clap.workspace = true
voronator.workspace = true
serde_json.workspace = true
cfg-if.workspace = true
laz.workspace = true
static_assertions.workspace = true
nalgebra.workspace = true

[features]
default = []
segmentation-svgs = []
