[package]
name = "k-nearest"
version = "0.2.0"
edition = "2021"
license-file = "license"
description = "K-nearest neighbors search for points with maximal search radius"
readme = "readme.md"
keywords = ["pointcloud", "knearest"]
categories = ["algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
math = { path = "../math" }
