[package]
name = "project"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints]
workspace = true

[dependencies]
nalgebra.workspace = true
serde.workspace = true
serde_json.workspace = true
bytemuck.workspace = true
tempfile.workspace = true
