[package]
name = "render"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints]
workspace = true

[dependencies]
input.workspace = true
bytemuck.workspace = true
image.workspace = true
log.workspace = true
wgpu.workspace = true
winit.workspace = true
nalgebra.workspace = true
thiserror.workspace = true

[features]
default = []
webgl = []
