[package]
name = "treee"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints]
workspace = true

[dependencies]
pollster.workspace = true
render.workspace = true
winit.workspace = true
thiserror.workspace = true
crossbeam.workspace = true
num_cpus.workspace = true
nalgebra.workspace = true

egui.workspace = true
egui-winit.workspace = true
egui-wgpu.workspace = true
