[package]
name = "treee"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints]
workspace = true

[dependencies]
render.workspace = true
input.workspace = true

pollster.workspace = true
winit.workspace = true
thiserror.workspace = true
crossbeam.workspace = true
num_cpus.workspace = true
nalgebra.workspace = true

egui.workspace = true
egui-winit.workspace = true
egui-wgpu.workspace = true
rfd.workspace = true
laz.workspace = true
bytemuck.workspace = true
static_assertions.workspace = true
dashmap.workspace = true
rayon.workspace = true
rand.workspace = true
voronator.workspace = true
serde.workspace = true
bincode.workspace = true
proj4rs.workspace = true
