[package]
name = "viewer"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lints]
workspace = true

[dependencies]
render.workspace = true
input.workspace = true
math.workspace = true
project.workspace = true
triangulation.workspace = true
pollster.workspace = true
rfd.workspace = true
crossbeam.workspace = true
thiserror.workspace = true
bytemuck.workspace = true
bincode.workspace = true
serde.workspace = true
simple_logger.workspace = true
log.workspace = true
