[package]
name = "window"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
render.workspace = true
input.workspace = true
math.workspace = true

[lints]
workspace = true
